# open-mastery

./: .env.example  .gitignore  DEVELOPER.md  LICENSE  Makefile  README.md  mcp.json.example
docs/: BUILDER_BRIEF.md  GRAPH_FORMAT.md  LANDSCAPE_ANALYSIS.md  STORY.md
engine/: LICENSE  README.md
engine/crates/core/: Cargo.toml
engine/crates/core/src/: graph.rs  lib.rs  (+2 more)
engine/crates/mcp-student/: Cargo.toml
engine/crates/mcp-student/src/: main.rs  server.rs  sse.rs  stdio.rs
engine/crates/mcp-teacher/: Cargo.toml
engine/crates/mcp-teacher/src/: artifacts.rs  git.rs  main.rs  server.rs
graph/: LICENSE  README.md  schema.json
graph/language/english-grammar/: _prompt.yaml
graph/language/english-spelling/: _prompt.yaml
graph/language/japanese-kana/: _prompt.yaml
graph/math/: 4th-grade.json  _prompt.yaml
graph/math/algebra/: _prompt.yaml
graph/math/decimals/: _prompt.yaml
graph/math/fractions/: _prompt.yaml
graph/math/geometry/: _prompt.yaml
graph/math/number-sense/: _prompt.yaml
graph/math/operations/: _prompt.yaml
graph/math/ratios-proportions/: _prompt.yaml
graph/math/statistics/: _prompt.yaml
graph/math/trigonometry/: _prompt.yaml
tasks/: 001-schema.md  002-first-course.md  003-engine-core.md  004-mcp-adapter.md  005-remaining-courses.md  006-web-frontend.md  007-graph-cleanup.md  008-statistics-expansion.md  009-upper-grades.md  010-encompassing-relationships.md  011-language-graphs.md  README.md
web/skilltree/: english-grammar.json  english-spelling.json  english.json  export.py  index.html  japanese-kana.json  math.json
(+280 files in other folders)
