[package]
name = "open-mastery-student"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "open-mastery-student"
path = "src/main.rs"

[dependencies]
open-mastery-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# HTTP/SSE transport
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
